; ModuleID = '/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_easy_unescape_ccsid.c'
source_filename = "/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_easy_unescape_ccsid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@ASCII_CCSID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @curl_easy_unescape_ccsid(i32* %0, i8* %1, i32 %2, i32* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %16 = load i8*, i8** %9, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %20, label %18

18:                                               ; preds = %6
  %19 = load i32, i32* @EINVAL, align 4
  store i32 %19, i32* @errno, align 4
  store i8* null, i8** %7, align 8
  br label %63

20:                                               ; preds = %6
  %21 = load i32, i32* @ASCII_CCSID, align 4
  %22 = load i8*, i8** %9, align 8
  %23 = load i32, i32* %10, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i32, i32* %10, align 4
  br label %28

27:                                               ; preds = %20
  br label %28

28:                                               ; preds = %27, %25
  %29 = phi i32 [ %26, %25 ], [ -1, %27 ]
  %30 = load i32, i32* %12, align 4
  %31 = call i8* @dynconvert(i32 %21, i8* %22, i32 %29, i32 %30)
  store i8* %31, i8** %14, align 8
  %32 = load i8*, i8** %14, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %35, label %34

34:                                               ; preds = %28
  store i8* null, i8** %7, align 8
  br label %63

35:                                               ; preds = %28
  %36 = load i32*, i32** %8, align 8
  %37 = load i8*, i8** %14, align 8
  %38 = load i32*, i32** %11, align 8
  %39 = call i8* @curl_easy_unescape(i32* %36, i8* %37, i32 0, i32* %38)
  store i8* %39, i8** %15, align 8
  %40 = load i8*, i8** %14, align 8
  %41 = call i32 @free(i8* %40)
  %42 = load i8*, i8** %15, align 8
  %43 = icmp ne i8* %42, null
  br i1 %43, label %45, label %44

44:                                               ; preds = %35
  store i8* null, i8** %7, align 8
  br label %63

45:                                               ; preds = %35
  %46 = load i32, i32* %13, align 4
  %47 = load i8*, i8** %15, align 8
  %48 = load i32, i32* @ASCII_CCSID, align 4
  %49 = call i8* @dynconvert(i32 %46, i8* %47, i32 -1, i32 %48)
  store i8* %49, i8** %14, align 8
  %50 = load i8*, i8** %15, align 8
  %51 = call i32 @free(i8* %50)
  %52 = load i8*, i8** %14, align 8
  %53 = icmp ne i8* %52, null
  br i1 %53, label %54, label %61

54:                                               ; preds = %45
  %55 = load i32*, i32** %11, align 8
  %56 = icmp ne i32* %55, null
  br i1 %56, label %57, label %61

57:                                               ; preds = %54
  %58 = load i8*, i8** %14, align 8
  %59 = call i32 @strlen(i8* %58)
  %60 = load i32*, i32** %11, align 8
  store i32 %59, i32* %60, align 4
  br label %61

61:                                               ; preds = %57, %54, %45
  %62 = load i8*, i8** %14, align 8
  store i8* %62, i8** %7, align 8
  br label %63

63:                                               ; preds = %61, %44, %34, %18
  %64 = load i8*, i8** %7, align 8
  ret i8* %64
}

declare dso_local i8* @dynconvert(i32, i8*, i32, i32) #1

declare dso_local i8* @curl_easy_unescape(i32*, i8*, i32, i32*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
